# grafs

./: .gitignore  README.md  data.csv  nx.html  pyproject.toml  settings.ini  setup.bat
src/: gui.py  read_csv.py  settings.py  show_graphics.py
