[project]
name = "grafs"
version = "0.1.0"
description = "Open animal schema with datas"
authors = [
    {name = "GenyaElamkov",email = "genyaElamkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
